added CodeCeption tests and began to code the header and master blades

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,57 @@
-
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
-// Variables
+//variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+//bootstrap
+//@import '~bootstrap/scss/bootstrap';
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
+//.navbar-laravel {
+//    background-color: #fff;
+//    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+//}
+
+@import "settings";
+
+// Include all foundation
+@import "../../vendor/bower_components/foundation/scss/foundation.scss";
+
+// Or selectively include components
+// @import
+//   "../../vendor/bower_components/foundation/scss/foundation/components/accordion",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/alert-boxes",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/block-grid",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/breadcrumbs",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/button-groups",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/buttons",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/clearing",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/dropdown",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/dropdown-buttons",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/flex-video",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/forms",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/grid",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/inline-lists",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/joyride",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/keystrokes",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/labels",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/magellan",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/orbit",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/pagination",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/panels",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/pricing-tables",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/progress-bars",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/reveal",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/side-nav",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/split-buttons",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/sub-nav",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/switches",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/tables",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/tabs",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/thumbs",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/tooltips",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/top-bar",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/type",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/offcanvas",
+//   "../../vendor/bower_components/foundation/scss/foundation/components/visibility";
+
+
+//include custom sass styles
+@import "_custom.scss";
