--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,7 +12,7 @@
 @import "settings";
 
 // Include all foundation
-@import "../../vendor/bower_components/foundation/scss/foundation.scss";
+//@import "../../vendor/bower_components/foundation/scss/foundation.scss";
 
 // Or selectively include components
 // @import
